[project]
name = "paper-brain"
version = "0.1.0"
description = "A personal paper management system"
authors = [{ name = "Rubayea Alketbi", email = "rubayea75@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "typer",
    "lancedb",
    "python-dotenv",
    "sentence-transformers",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff"
]


[project.scripts]
brain = "paper_brain.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_brain"]